# resume-as-code

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  salesforce-sdet-job.txt
.github/workflows/: ci.yml
data/common/: experience.yml  footer.yml  header.yml  skills.yml
data/profiles/qe-leadership/: header.yml  job.txt  job.txt.example  skills.yml  summary.yml
data/profiles/sdet/: experience.yml  job.txt  summary.yml
data/profiles/sre-leadership/: experience.yml  header.yml  job.txt  skills.yml  summary.yml
data/profiles/test-ninja/: header.yml  job.txt.example  skills.yml  summary.yml
data/profiles/uptime-obsessive/: job.txt.example  summary.yml
docs/: WORKFLOW.md  agentic-profile-generator-design.md  agentic-workflow.md  external-data-directory-migration.md
prompts/: optimize-profile-for-job.md
src/resume/: builder.py  cli.py  cv_converter.py  loader.py  models.py  pdf.py  utils.py
src/resume/ai/: agents.py  crew_agents.py  crew_models.py  style_rules.py
templates/: resume.html.j2
tests/: conftest.py  test_builder.py  test_loader.py  test_models.py  test_pdf.py  test_utils.py
tests/resume/ai/: test_style_rules.py
